--- a/lerobot/configs/policy/act_ur5_real.yaml
+++ b/lerobot/configs/policy/act_ur5_real.yaml
@@ -14,7 +14,7 @@
 # ```
 
 seed: 1000
-dataset_repo_id: cheney/bottle
+dataset_repo_id: cheney/dish
 
 override_dataset_stats:
   observation.images.head:
@@ -31,7 +31,7 @@ override_dataset_stats:
     std: [[[0.229]], [[0.224]], [[0.225]]]  # (c,1,1)
 
 training:
-  offline_steps: 210000
+  offline_steps: 160000
   online_steps: 0
   eval_freq: -1
   save_freq: 10000
@@ -39,7 +39,7 @@ training:
   save_checkpoint: true
 
   batch_size: 16
-  lr: 1e-5
+  lr: 2e-5
   lr_backbone: 1e-5
   weight_decay: 1e-4
   grad_clip_norm: 10
